[package]
name = "gridded_data"
version = "0.1.2"
edition = "2024"
description = "Multivariate interpolation on a regular / rectilinear grid"
readme = "README.md"
license  = "MIT OR Apache-2.0"
repository = "https://github.com/StefanMathis/gridded_data.git"

[dependencies]
cart_lin =  { version = "0.2", path = "../cart_lin" }
nalgebra = {version = "0.32", optional = true}
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
nalgebra = ["dep:nalgebra"]

[dev-dependencies]
approx = "0.5.1"
indoc = "1"
serde_yaml = {version = "0.8"}
gridded_data = { path = ".", features = ["serde", "nalgebra"]}

[package.metadata.docs.rs]
features = ["serde", "nalgebra"]